--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^0.14.1+3
+  firebase_core: ^0.5.0+1
+  fl_chart: ^0.12.0
   get_it: ^5.0.1
   rxdart: ^0.24.1
-  firebase_core: ^0.5.0+1
-  cloud_firestore: ^0.14.1+3
 
 dev_dependencies:
   flutter_test:
@@ -43,7 +44,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/quotes.json
+    - assets/quotes.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
