--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animations: ^1.1.2
   cloud_firestore: ^0.14.1+3
   firebase_core: ^0.5.0+1
   fl_chart: ^0.12.0
